Fix unecessary scrollbar on panel

--- a/less/panel.less
+++ b/less/panel.less
@@ -5,7 +5,7 @@
 	left: -230px;
 	z-index: 1;
 	max-height: 350px;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 .panel.on{
     transition: 0.5s;
